01/07/2020 | Andres Meza | Validaciones

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
-@import './adoptions.css';
-@import './pets.css';
-@import './users.css';
-@import './vacinnes.css';
+@import "./adoptions.css";
+@import "./pets.css";
+@import "./users.css";
+@import "./vacinnes.css";
+@import "./quote.css";
