--- a/public/css/adoptions.css
+++ b/public/css/adoptions.css
@@ -10,6 +10,7 @@
     --color-white-fast: rgba(255, 255, 255, 0.5);
     --color-button-approve:#2774CE;
     --color-button-decline:#7B96F8;
+    --color-button-view:#2732ce;
 }
 * {
     padding: 0;
@@ -281,6 +282,14 @@ input {
     align-items: center;
     justify-content: center;
 }
+.content-list-adoption {
+    background-color: var(--color-white-slow) ;
+    grid-area: content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .container-requests-adoption{
     background-color:var(--color-white-slow);
     border-radius: 20px;
@@ -301,7 +310,7 @@ input {
     background-color: var(--color-white-fast);
     border-radius: 10px;
 }
-.approve-button,.decline-button{
+.approve-button,.decline-button,.view-button{
     width: 100%;
     height: 30px;
     border: none;
@@ -311,9 +320,28 @@ input {
     cursor: pointer;
     margin: 5px 0;
 }
+.container-section-adoption{
+    text-align:left;
+}
 .approve-button{
     background-color: var(--color-button-approve);
 }
 .decline-button{
     background-color: var(--color-button-decline);
+}
+.view-button{
+    background-color: var(--color-button-view);
+}
+.text-bold{
+    font-weight: bold;
+}
+.close-button-view-adoption{
+    width: 100%;
+    height: 30px;
+    border: none;
+    text-align: right;
+}
+.bi-x-square-fill{
+    font-size: 36px;
+    color: var(--color-button-view);
 }
